added pre-1972 earth- and other body-fixed frames

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,7 @@ package-data = {"grss" = [
     "kernels/get_kernels.py",
     "kernels/*.log",
     "kernels/*.tm",
+    "kernels/*.tpc",
     "kernels/*.txt",
 ]}
 
