--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -8,6 +8,10 @@ on:
     paths:
       - "grss/version.txt"
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
     build-and-upload:
       runs-on: ubuntu-latest
