updated build and install process for future openmp support

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,7 +18,7 @@ else()
 endif()
 
 # link openmp
-# find_package(OpenMP REQUIRED)
-# if(OPENMP_FOUND)
-#     target_link_libraries(${PROJECT_NAME} PUBLIC OpenMP::OpenMP_CXX)
-# endif()
+find_package(OpenMP)
+if(OPENMP_FOUND)
+    target_link_libraries(${PROJECT_NAME} PUBLIC OpenMP::OpenMP_CXX)
+endif()
