--- a/environment.yml
+++ b/environment.yml
@@ -6,12 +6,13 @@ dependencies:
   - astropy>=5.0
   - astroquery>=0.4.0
   - healpy>=1.16.0
-  - ipykernel
-  - jupyter
   - matplotlib>=3.3.0
   - numba>=0.55.0
   - numpy>=1.22.0
   - pandas>=1.5.0
-  - python>=3.7
+  - pybind11[global]>=2.10.0
   - requests>=2.22.0
   - spiceypy>=5.0.0
+  - ipykernel
+  - jupyter
+  - python>=3.8
