--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "grss"
-dynamic = ["version"]
+dynamic = ["version", "dependencies"]
 description = "GRSS: Gauss-Radau Small-body Simulator"
 readme = "README.md"
 requires-python = ">=3.8"
@@ -37,17 +37,6 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
     "Topic :: Scientific/Engineering :: Astronomy",
 ]
-dependencies=[
-    "astropy>=5.0",
-    "astroquery>=0.4.0",
-    "healpy>=1.16.0",
-    "matplotlib>=3.3.0",
-    "numba>=0.55.0",
-    "numpy>=1.22.0",
-    "pandas>=1.5.0",
-    "requests>=2.22.0",
-    "spiceypy>=5.0.0",
-]
 
 [project.urls]
 "Homepage" = "https://github.com/rahil-makadia/grss"
@@ -67,6 +56,9 @@ package-data = {"grss" = [
     "kernels/*.tpc",
     "kernels/*.txt",
 ]}
+
+[tool.setuptools.dynamic]
+dependencies = {file = ["requirements.txt"]}
 
 [tool.cibuildwheel.macos]
 archs = ["x86_64", "arm64"]
