--- a/.github/workflows/python_tests.yml
+++ b/.github/workflows/python_tests.yml
@@ -22,10 +22,7 @@ jobs:
           pip3 install .
       - name: Run tests
         run: |
-          python3 -m pip install jupyter ipykernel
-          python3 -m ipykernel install --user
+          python3 -m pip install jupyter
           cd tests/python
-          jupyter nbconvert --to script fit/*.ipynb
-          jupyter nbconvert --to script prop/*.ipynb
-          python fit/*.py
-          python prop/*.py
+          ./run_tests.sh prop
+          ./run_tests.sh fit
