change python tests to also run on linux

--- a/.github/workflows/python_tests.yml
+++ b/.github/workflows/python_tests.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   prop-and-fit:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
