added parallel methods; might need to remove cspice dependency

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,7 @@ elements.cpp
 force.cpp
 gr15.cpp
 interpolate.cpp
+parallel.cpp
 simulation.cpp
 spk.cpp
 stm.cpp
@@ -18,7 +19,7 @@ else()
 endif()
 
 # link openmp
-find_package(OpenMP)
+find_package(OpenMP REQUIRED)
 if(OPENMP_FOUND)
     target_link_libraries(${PROJECT_NAME} PUBLIC OpenMP::OpenMP_CXX)
 endif()
