--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           python3 -m pip install --upgrade pip
           source initialize.sh
-          pip3 install basemap
+          pip3 install basemap --only-binary=basemap
           pip3 install .
       - name: Build docs
         run: |
