--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   sphinx:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -19,12 +19,13 @@ jobs:
         run: |
           python3 -m pip install --upgrade pip
           source initialize.sh
+          brew install geos
+          pip3 install basemap
           pip3 install .
       - name: Build docs
         run: |
           python3 -m pip install sphinx sphinx-copybutton sphinx-gallery nbsphinx sphinx-book-theme sphinx-favicon
-          source build_cpp.sh
-          cp build/prop_simulation* grss/prop/
+          brew install pandoc
           cd docs
           make clean html
           cd ..
