--- a/environment.yml
+++ b/environment.yml
@@ -6,6 +6,7 @@ dependencies:
   - astropy>=5.0
   - astroquery>=0.4.0
   - healpy>=1.16.0
+  - joblib>=1.3.0
   - matplotlib>=3.3.0
   - numba>=0.55.0
   - numpy>=1.22.0
