--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   sphinx:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -19,15 +19,16 @@ jobs:
         run: |
           python3 -m pip install --upgrade pip
           source initialize.sh
-          brew install geos
+          # brew install geos
           pip3 install basemap
           pip3 install .
       - name: Build docs
         run: |
           python3 -m pip install sphinx sphinx-copybutton sphinx-gallery nbsphinx sphinx-book-theme sphinx-favicon
-          brew install pandoc
+          # brew install pandoc
           source build_cpp.sh
           cp build/prop_simulation* grss/prop
+          python -c "import grss"
           cd docs
           make clean html
           cd ..
