--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Build docs
         run: |
           python3 -m pip install sphinx sphinx-copybutton sphinx-gallery nbsphinx sphinx-book-theme sphinx-favicon
-          brew install pandoc
+          pip3 install pandoc
           source build_cpp.sh
           cp build/prop_simulation* grss/prop
           cd docs
