--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ dynamic = ["version", "dependencies"]
 description = "GRSS: Gauss-Radau Small-body Simulator"
 readme = "README.md"
 requires-python = ">=3.8"
-license = "MIT"
+license = {file = "LICENSE"}
 keywords = [
     "astronomy",
     "asteroids",
