--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -12,30 +12,53 @@ permissions:
   id-token: write
 
 jobs:
-    build-and-upload:
-      runs-on: ubuntu-latest
-      steps:
-        - name: Checkout repo
-          uses: actions/checkout@v3
-        - name: Set up Python
-          uses: actions/setup-python@v4
-          with:
-            python-version: "3.8"
-        - name: Initialize repository
-          run: |
-            source initialize.sh --no-tm-overwrite
-        - name: Run build script
-          run: source build_python.sh
-        - name: Show files
-          run: ls -l dist
-        - name: Publish to Test PyPI
-          if: github.ref == 'refs/heads/dev'
-          uses: pypa/gh-action-pypi-publish@release/v1
-          with:
-            password: ${{ secrets.TEST_PYPI_API_TOKEN }}
-            repository-url: https://test.pypi.org/legacy/
-        - name: Publish to PyPI
-          if: github.ref == 'refs/heads/main'
-          uses: pypa/gh-action-pypi-publish@release/v1
-          with:
-            password: ${{ secrets.PYPI_API_TOKEN }}
+  build:
+    name: build ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest]
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.8"
+      - name: Initialize repository
+        run: |
+          source initialize.sh --no-tm-overwrite
+      - name: Build python distributions
+        run: source build_python.sh
+      - name: Upload distribution for next job
+        uses: actions/upload-artifact@master
+        with:
+          name: dist-${{ matrix.os }}
+          path: dist
+  publish:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download Ubuntu distribution from previous job
+        uses: actions/download-artifact@master
+        with:
+          name: dist-ubuntu-latest
+          path: dist
+      - name: Download MacOS distribution from previous job
+        uses: actions/download-artifact@master
+        with:
+          name: dist-macos-latest
+          path: dist
+      - name: Show files
+        run: ls -l dist
+      - name: Publish to Test PyPI
+        if: github.ref == 'refs/heads/dev'
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+          repository-url: https://test.pypi.org/legacy/
+      - name: Publish to PyPI
+        if: github.ref == 'refs/heads/main'
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          password: ${{ secrets.PYPI_API_TOKEN }}
