back to uploading wheels part 2

--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -28,6 +28,7 @@ jobs:
       - name: Initialize repository
         run: |
           source initialize.sh --no-tm-overwrite
+          conda install pybind11 -c conda-forge
       - name: Build python distributions
         run: source build_python.sh
       - name: Upload distribution for next job
