refined github action triggers (except pypi since that needs testing)

--- a/.github/workflows/cpp_tests.yml
+++ b/.github/workflows/cpp_tests.yml
@@ -4,6 +4,10 @@ on:
     branches:
       - main
       - dev
+    paths:
+      - 'include/**'
+      - 'src/**'
+      - 'tests/cpp/**'
 
 jobs:
   prop-only:
