--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -4,6 +4,12 @@ on:
     branches:
       - main
       - dev
+    paths:
+      - 'include/**'
+      - 'src/**'
+      - 'grss/**'
+      - 'tests/python/**'
+
 
 jobs:
   sphinx:
