back to uploading wheels part 6

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,7 +65,8 @@ before-build = [
     "pip install pybind11",
     "pybind11_DIR=$(pybind11-config --cmakedir)",
     "export CMAKE_PREFIX_PATH=$CMAKE_PREFIX_PATH:$pybind11_DIR",
-    "echo $pybind11_DIR"
+    "export CMAKE_MODULE_PATH=$CMAKE_MODULE_PATH:$pybind11_DIR",
+    "ls -l $pybind11_DIR"
 ]
 
 [tool.cibuildwheel.macos]
