--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,10 +62,10 @@ dependencies = {file = ["requirements.txt"]}
 
 [tool.cibuildwheel]
 before-build = [
-    "pip install pybind11",
     "pybind11_DIR=$(pybind11-config --cmakedir)",
     "cmake -Dpybind11_DIR=$pybind11_DIR",
-    "ls -l $pybind11_DIR",
+    "pwd",
+    "ls -la",
 ]
 
 [tool.cibuildwheel.macos]
