back to uploading wheels part 11

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,6 +62,7 @@ dependencies = {file = ["requirements.txt"]}
 
 [tool.cibuildwheel]
 before-build = [
+    "pip install pybind11",
     "pybind11_DIR=$(pybind11-config --cmakedir)",
     "cmake -Dpybind11_DIR=$pybind11_DIR",
     "pwd",
