--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,9 +64,8 @@ dependencies = {file = ["requirements.txt"]}
 before-build = [
     "pip install pybind11",
     "mkdir build",
-    "cmake -B./build -S.",
     "pybind11_DIR=$(pybind11-config --cmakedir)",
-    "cmake -Dpybind11_DIR=$pybind11_DIR",
+    "cmake -Dpybind11_DIR=$pybind11_DIR -B./build -S.",
     "ls -la",
 ]
 
