--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,10 +63,10 @@ dependencies = {file = ["requirements.txt"]}
 [tool.cibuildwheel]
 before-build = [
     "pip install pybind11",
+    "rm -rf build",
     "mkdir build",
     "pybind11_DIR=$(pybind11-config --cmakedir)",
     "cmake -Dpybind11_DIR=$pybind11_DIR -B./build -S.",
-    "ls -la",
 ]
 
 [tool.cibuildwheel.macos]
