--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,10 +68,12 @@ before-build = [
     "pybind11_DIR=$(pybind11-config --cmakedir)",
     "cmake -Dpybind11_DIR=$pybind11_DIR -B./build -S.",
 ]
-skip = "cp38-macosx_arm64"
 
 [tool.cibuildwheel.macos]
 archs = ["arm64"]
+before-build = [
+    "brew reinstall -sv gcc"
+] + tool.cibuildwheel.before-build
 
 [tool.cibuildwheel.linux]
 archs = ["x86_64"]
