back to uploading wheels part 22

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,8 +60,10 @@ package-data = {"grss" = [
 [tool.setuptools.dynamic]
 dependencies = {file = ["requirements.txt"]}
 
-[tool.cibuildwheel]
+[tool.cibuildwheel.macos]
+archs = ["arm64"]
 before-build = [
+    "brew reinstall -sv gcc",
     "pip install pybind11",
     "rm -rf build",
     "mkdir build",
@@ -69,11 +71,12 @@ before-build = [
     "cmake -Dpybind11_DIR=$pybind11_DIR -B./build -S.",
 ]
 
-[tool.cibuildwheel.macos]
-archs = ["arm64"]
-before-build = [
-    "brew reinstall -sv gcc"
-] + tool.cibuildwheel.before-build
-
 [tool.cibuildwheel.linux]
 archs = ["x86_64"]
+before-build = [
+    "pip install pybind11",
+    "rm -rf build",
+    "mkdir build",
+    "pybind11_DIR=$(pybind11-config --cmakedir)",
+    "cmake -Dpybind11_DIR=$pybind11_DIR -B./build -S.",
+]
