--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -25,6 +25,11 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.10"
+      - name: Set up Xcode
+        if: matrix.os == 'macos-14'
+        uses: maxim-lobanov/setup-xcode@v1.6.0
+        with:
+          xcode-version: '15.1.0'
       - name: Initialize repository
         run: |
           source initialize.sh --no-tm-overwrite
