--- a/environment.yml
+++ b/environment.yml
@@ -3,18 +3,9 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - astropy>=5.0
-  - astroquery>=0.4.0
-  - basemap>=1.4.0
-  - healpy>=1.16.0
-  - joblib>=1.3.0
-  - matplotlib>=3.3.0
-  - numba>=0.55.0
-  - numpy>=1.22.0
-  - pandas>=1.5.0
-  - pybind11[global]>=2.10.0
-  - requests>=2.22.0
-  - spiceypy>=5.0.0
-  - ipykernel
-  - jupyter
   - python>=3.8
+  - pip
+  - jupyter
+  - ipykernel
+  - pip:
+    -r requirements.txt
