--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,9 +56,17 @@ package-data = {"grss" = [
     "kernels/*.tpc",
     "kernels/*.txt",
 ]}
+include-package-data = true
+
+[tool.setuptools.packages.find]
+exclude = [
+    "debias",
+    "kernels",
+]
 
 [tool.setuptools.dynamic]
-dependencies = {file = ["requirements.txt"]}
+version = {file = "grss/version.txt"}
+dependencies = {file = "requirements.txt"}
 
 [tool.cibuildwheel]
 before-build = [
