updated name for c++ portion of GRSS; gaia astrometry table cleanup

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,9 +32,9 @@ include(CPack)
 
 # create pybind11 module
 find_package(pybind11 REQUIRED)
-pybind11_add_module(prop_simulation src/${PROJECT_NAME}.cpp)
-target_link_libraries(prop_simulation PRIVATE ${PROJECT_NAME})
-target_compile_definitions(prop_simulation PRIVATE VERSION_INFO=${${PROJECT_NAME}_VERSION})
+pybind11_add_module(libgrss src/${PROJECT_NAME}.cpp)
+target_link_libraries(libgrss PRIVATE ${PROJECT_NAME})
+target_compile_definitions(libgrss PRIVATE VERSION_INFO=${${PROJECT_NAME}_VERSION})
 
 # compile tests
 add_subdirectory(tests/cpp/prop)
