forgot the version bump for the previous PR you silly goose

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,12 +25,8 @@ include_directories(${CMAKE_SOURCE_DIR}/extern/cspice/include)
 # Set source code directories
 add_subdirectory(src)
 
-# Configure CPack for cross-platform packaging
-set(CPACK_PROJECT_NAME ${PROJECT_NAME})
-set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
-include(CPack)
-
 # create pybind11 module
+set(PYBIND11_FINDPYTHON ON)
 find_package(pybind11 REQUIRED)
 pybind11_add_module(libgrss src/${PROJECT_NAME}.cpp)
 target_link_libraries(libgrss PRIVATE ${PROJECT_NAME})
