--- a/.github/workflows/cpp_tests.yml
+++ b/.github/workflows/cpp_tests.yml
@@ -17,6 +17,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Build GRSS library
         run: |
+          sudo apt-get install doxygen
           source initialize.sh --tm-overwrite
           source build_cpp.sh -clean
       - name: Run tests
