--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -30,9 +30,14 @@ jobs:
         uses: maxim-lobanov/setup-xcode@v1.6.0
         with:
           xcode-version: '15.1.0'
+      - name: Install doxygen
+        if: matrix.os == 'ubuntu-latest'
+        run: sudo apt-get install doxygen
+      - name: Install doxygen
+        if: matrix.os == 'macos-14'
+        run: brew install doxygen
       - name: Initialize repository
         run: |
-          sudo apt-get install doxygen
           source initialize.sh --no-tm-overwrite
       - name: Build python distributions
         run: source build_python.sh
