added initial PropSimulation save method

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,8 +15,8 @@ project(grss VERSION ${ver})
 # specify the C++ standard and compiler flags
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
-add_compile_options(-std=c++11 -O3 -fPIC -fopenmp) # operational flags
-# add_compile_options(-std=c++11 -g3 -fPIC -fopenmp -Werror -Wall -Wextra -pedantic) # debugging flags
+add_compile_options(-std=c++11 -O3 -fPIC -fopenmp -DGRSS_VERSION="${${PROJECT_NAME}_VERSION}") # operational flags
+# add_compile_options(-std=c++11 -g3 -fPIC -fopenmp -DGRSS_VERSION="${${PROJECT_NAME}_VERSION}" -Werror -Wall -Wextra -pedantic) # debugging flags
 
 # Set header file directories
 include_directories(${CMAKE_SOURCE_DIR}/include)
@@ -29,7 +29,6 @@ add_subdirectory(src)
 find_package(pybind11 REQUIRED)
 pybind11_add_module(libgrss src/${PROJECT_NAME}.cpp)
 target_link_libraries(libgrss PRIVATE ${PROJECT_NAME})
-target_compile_definitions(libgrss PRIVATE VERSION_INFO=${${PROJECT_NAME}_VERSION})
 
 # compile tests
 add_subdirectory(tests/cpp/prop)
