added initial PCK memory map stuff (didn't wanna keep it local cause this was v big work amount lol)

--- a/.github/workflows/cpp_tests.yml
+++ b/.github/workflows/cpp_tests.yml
@@ -23,6 +23,7 @@ jobs:
       - name: Run tests
         run: |
           cd tests/cpp/prop
+          ./pck_map.out
+          ./spk_map.out
           ./apophis.out
           ./didymos.out
-          ./spk_map.out
