added precession/nutation for IAU frames; only use for cspice now is tests

--- a/tests/cpp/prop/CMakeLists.txt
+++ b/tests/cpp/prop/CMakeLists.txt
@@ -6,4 +6,11 @@ foreach(file ${files})
     set_target_properties(${name} PROPERTIES SUFFIX ".out")
     set_target_properties(${name} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/tests/cpp/prop)
     target_link_libraries(${name} ${PROJECT_NAME})
+    # link cspice for tests
+    target_include_directories(${name} PRIVATE ${CMAKE_SOURCE_DIR}/extern/cspice/include)
+    if (WIN32)
+        target_link_libraries(${name} ${CMAKE_SOURCE_DIR}/extern/cspice/lib/cspice.lib)
+    else()
+        target_link_libraries(${name} ${CMAKE_SOURCE_DIR}/extern/cspice/lib/cspice.a)
+    endif()
 endforeach()
