updated downloads list to remove unnecessary spice kernel files

--- a/.github/workflows/cpp_tests.yml
+++ b/.github/workflows/cpp_tests.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Build GRSS library
         run: |
           sudo apt-get install doxygen
-          source initialize.sh --tm-overwrite
+          source initialize.sh
           source build_cpp.sh -clean
       - name: Run tests
         run: |
