--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -38,7 +38,7 @@ jobs:
         run: brew install doxygen
       - name: Initialize repository
         run: |
-          source initialize.sh --no-tm-overwrite
+          source initialize.sh
       - name: Build python distributions
         run: source build_python.sh
       - name: Upload distribution for next job
