updates CIs to start when workflow files change

--- a/.github/workflows/cpp_tests.yml
+++ b/.github/workflows/cpp_tests.yml
@@ -5,6 +5,7 @@ on:
       - main
       - dev
     paths:
+      - '.github/workflows/cpp_tests.yml'
       - 'include/**'
       - 'src/**'
       - 'tests/cpp/**'
