--- a/.github/workflows/python_tests.yml
+++ b/.github/workflows/python_tests.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   prop-and-fit:
-    runs-on: ubuntu-latest
+    runs-on: macos-14
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -21,10 +21,14 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: 3.11
+      - name: Set up Xcode
+        uses: maxim-lobanov/setup-xcode@v1.6.0
+        with:
+          xcode-version: '15.1.0'
       - name: Install GRSS (including dependencies)
         run: |
           python3 -m pip install --upgrade pip
-          sudo apt-get install doxygen
+          brew install doxygen
           source initialize.sh
           pip3 install .
       - name: Run tests
