update cmake gcc versioning pt 3

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,8 @@ if(APPLE)
     # find the brew GNU compiler version
     execute_process(COMMAND bash -c "ls $HOMEBREW_PREFIX/bin/g++*" OUTPUT_VARIABLE BREW_GXX OUTPUT_STRIP_TRAILING_WHITESPACE)
     # last two characters are the version number
-    string(REGEX MATCH "[0-9]+\\.[0-9]+" BREW_GXX_VERSION ${BREW_GXX})
+    string(REGEX REPLACE ".*g\\+\\+-(.*)$" "\\1" BREW_GXX_VERSION ${BREW_GXX})
+    message(STATUS "Found GNU g++ compiler version: ${BREW_GXX_VERSION}")
     # use any GNU g++ compiler in BREW_PREFIX/bin without specifying the version
     set(CMAKE_C_COMPILER "$ENV{HOMEBREW_PREFIX}/bin/gcc-${BREW_GXX_VERSION}")
     set(CMAKE_CXX_COMPILER "$ENV{HOMEBREW_PREFIX}/bin/g++-${BREW_GXX_VERSION}")
