--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   sphinx:
-    runs-on: macos-14
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -15,14 +15,10 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: 3.11
-      - name: Set up Xcode
-        uses: maxim-lobanov/setup-xcode@v1.6.0
-        with:
-          xcode-version: '15.2.0'
       - name: Install GRSS (including dependencies)
         run: |
           python3 -m pip install --upgrade pip
-          brew install pandoc doxygen
+          sudo apt-get install pandoc doxygen
           source initialize.sh
           pip3 install .
       - name: Build docs
