--- a/.github/workflows/cpp_tests.yml
+++ b/.github/workflows/cpp_tests.yml
@@ -22,6 +22,7 @@ jobs:
           python-version: "3.11"
       - name: Build GRSS library
         run: |
+          brew install gcc@14
           source initialize.sh
           source build_cpp.sh -clean
       - name: Run tests
