--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -5,8 +5,8 @@ on:
     branches:
       - main
       - dev
-    paths:
-      - "grss/version.txt"
+    # paths:
+    #   - "grss/version.txt"
 
 permissions:
   id-token: write
@@ -17,7 +17,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-14]
+        os: [ubuntu-latest] #, macos-latest]
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -26,7 +26,7 @@ jobs:
         with:
           python-version: "3.11"
       - name: Set up Xcode
-        if: matrix.os == 'macos-14'
+        if: matrix.os == 'macos-latest'
         uses: maxim-lobanov/setup-xcode@v1.6.0
         with:
           xcode-version: '15.1.0'
@@ -34,7 +34,7 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         run: sudo apt-get install doxygen
       - name: Install doxygen
-        if: matrix.os == 'macos-14'
+        if: matrix.os == 'macos-latest'
         run: brew install doxygen
       - name: Initialize repository
         run: |
@@ -58,7 +58,7 @@ jobs:
       - name: Download MacOS distribution from previous job
         uses: actions/download-artifact@master
         with:
-          name: dist-macos-14
+          name: dist-macos-latest
           path: dist
       - name: Show files
         run: ls -l dist
