only build docs when needed

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           python3 -m pip install sphinx-book-theme==1.0.1 pydata-sphinx-theme==0.15.2
           python3 -m pip install ipython sphinx sphinx-copybutton sphinx-gallery nbsphinx sphinx-favicon breathe
-          source build_cpp.sh
+          source build_cpp.sh -docs
           cp build/libgrss* grss/
           cd docs
           make clean html
