--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,7 +70,7 @@ before-build = [
     "rm -rf build",
     "mkdir build",
     "pybind11_DIR=$(pybind11-config --cmakedir)",
-    "cmake -Dpybind11_DIR=$pybind11_DIR -DPYTHON_EXECUTABLE=$(which python) -B./build -S.",
+    "cmake -DBUILD_DOCS=OFF -Dpybind11_DIR=$pybind11_DIR -DPYTHON_EXECUTABLE=$(which python) -B./build -S.",
 ]
 
 [tool.cibuildwheel.macos]
