trigger pypi job (without publishing) on every commit

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -4,6 +4,12 @@ on:
     branches:
       - main
       - dev
+    paths:
+      - '.github/workflows/docs.yml'
+      - 'docs/**'
+      - 'include/**'
+      - 'src/**'
+      - 'grss/**'
 
 jobs:
   sphinx:
