no need to download cspice for non c++ test actions

--- a/.github/workflows/cpp_tests.yml
+++ b/.github/workflows/cpp_tests.yml
@@ -19,6 +19,9 @@ jobs:
       - name: Build GRSS library
         run: |
           sudo apt-get install doxygen
+          cd ./extern/
+          python3 get_cspice.py
+          cd ..
           source initialize.sh
           source build_cpp.sh -clean
       - name: Run tests
