remove unnecessary calls to initialize.sh to avoid multiple downloads

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           python3 -m pip install --upgrade pip
           sudo apt-get install pandoc doxygen
-          source initialize.sh
+          pip3 install "pybind11[global]>=2.10.0"
           pip3 install .
       - name: Build docs
         run: |
