cpp tests update 2

--- a/.github/workflows/cpp_tests.yml
+++ b/.github/workflows/cpp_tests.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   prop-only:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -22,8 +22,6 @@ jobs:
           cd ./extern/
           python3 get_cspice.py
           cd ..
-          python3 -m venv ./venv
-          source ./venv/bin/activate
           source initialize.sh
           source build_cpp.sh -clean
       - name: Run tests
