--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -5,8 +5,8 @@ on:
     branches:
       - main
       - dev
-    # paths:
-    #   - "grss/version.txt"
+    paths:
+      - "grss/version.txt"
 
 permissions:
   id-token: write
@@ -39,30 +39,30 @@ jobs:
         with:
           name: dist-${{ matrix.os }}
           path: dist
-  # publish:
-  #   needs: build
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Download Ubuntu distribution from previous job
-  #       uses: actions/download-artifact@master
-  #       with:
-  #         name: dist-ubuntu-latest
-  #         path: dist
-  #     - name: Download MacOS distribution from previous job
-  #       uses: actions/download-artifact@master
-  #       with:
-  #         name: dist-macos-latest
-  #         path: dist
-  #     - name: Show files
-  #       run: ls -l dist
-  #     - name: Publish to Test PyPI
-  #       if: github.ref == 'refs/heads/dev'
-  #       uses: pypa/gh-action-pypi-publish@release/v1
-  #       with:
-  #         password: ${{ secrets.TEST_PYPI_API_TOKEN }}
-  #         repository-url: https://test.pypi.org/legacy/
-  #     - name: Publish to PyPI
-  #       if: github.ref == 'refs/heads/main'
-  #       uses: pypa/gh-action-pypi-publish@release/v1
-  #       with:
-  #         password: ${{ secrets.PYPI_API_TOKEN }}
+  publish:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download Ubuntu distribution from previous job
+        uses: actions/download-artifact@master
+        with:
+          name: dist-ubuntu-latest
+          path: dist
+      - name: Download MacOS distribution from previous job
+        uses: actions/download-artifact@master
+        with:
+          name: dist-macos-latest
+          path: dist
+      - name: Show files
+        run: ls -l dist
+      - name: Publish to Test PyPI
+        if: github.ref == 'refs/heads/dev'
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+          repository-url: https://test.pypi.org/legacy/
+      - name: Publish to PyPI
+        if: github.ref == 'refs/heads/main'
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          password: ${{ secrets.PYPI_API_TOKEN }}
